--- a/style.css
+++ b/style.css
@@ -85,6 +85,16 @@ body {
 	-webkit-animation: scale-in-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: scale-in-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+/* .scale-in-tl-start {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 25vw;  
+  height: 25vh; 
+  z-index: 10;
+-webkit-animation: scale-in-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: scale-in-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+} */
 .scale-in-tr {
     position: fixed;
     top: 0;
